<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:layout_weight="1"
    android:background="@color/colorAccent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    >

    <TextView
        android:id="@+id/judul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:text="@string/daftar_title"
        android:textColor="@android:color/white"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        />
    <LinearLayout
        android:id="@+id/form"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:background="@drawable/box_login_line"
        android:layout_width="match_parent"
        android:layout_below="@+id/judul"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:padding="5dp">
        <EditText
            android:id="@+id/txtnama"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="@dimen/ten_margin"
            android:background="@drawable/textbox_login_shadow"
            android:hint="@string/daftar_et_nama"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:paddingLeft="10dp"
            />

        <EditText
            android:id="@+id/txtemail"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="@dimen/ten_margin"
            android:background="@drawable/textbox_login_shadow"
            android:hint="@string/daftar_et_username"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:paddingLeft="10dp"
            />

        <EditText
            android:id="@+id/txttelp"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="@dimen/ten_margin"
            android:background="@drawable/textbox_login_shadow"
            android:hint="@string/daftar_et_telp"
            android:inputType="text"
            android:textColorHint="@android:color/white"
            android:paddingLeft="10dp"
            />

        <EditText
            android:id="@+id/txtalamat"
            android:maxLength="50"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/textbox_login_shadow"
            android:drawablePadding="8dp"
            android:gravity="center_vertical"
            android:hint="@string/daftar_et_addres"
            android:inputType="textMultiLine"
            android:padding="10dp"
            android:lines="3"
            android:textColor="@color/black"
            android:textColorHint="@android:color/white"
            android:textSize="16sp"
            android:layout_margin="@dimen/ten_margin"/>

        <EditText
            android:id="@+id/txtpassword"
            android:layout_width="match_parent"
            android:layout_height="38dp"
            android:layout_margin="@dimen/ten_margin"
            android:layout_centerInParent="true"
            android:background="@drawable/textbox_login_shadow"
            android:hint="@string/daftar_et_password"
            android:textColorHint="@android:color/white"
            android:paddingLeft="10dp"
            android:inputType="textPassword"
            />
        <Button
            android:layout_gravity="bottom"
            android:onClick="daftar"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/daftar_btn_register"
            android:textStyle="bold"
            android:textSize="18sp"
            android:textColor="@android:color/white"
            android:layout_margin="5dp"
            android:background="@drawable/box_login_line"
            />

    </LinearLayout>

    <TextView
        android:layout_alignParentBottom="true"
        android:textAlignment="center"
        android:id="@+id/daftar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="15sp"
        android:text="@string/daftar_txt_have_account"
        android:textColor="@android:color/white"
        android:layout_centerInParent="true"
        android:textStyle="bold"
        android:onClick="klik_login"
        />
</RelativeLayout>