<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="10dp"
        android:background="@color/colorPrimary"
        android:id="@+id/relaToolbar">

        <TextView
            android:id="@+id/judul"
            android:layout_marginTop="10dp"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_change_lang_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:textColor="@color/white"
            android:textStyle="bold"/>

    </RelativeLayout>


    <LinearLayout
       android:padding="20dp"
        android:layout_marginTop="10dp"
        android:layout_below="@+id/relaToolbar"
        android:layout_width="match_parent"
        android:orientation="vertical"
        android:gravity="center_horizontal"
        android:layout_height="match_parent">


        <RadioGroup
            android:id="@+id/rGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <RadioButton
                android:id="@+id/rdEnglish"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_radio_english"
                android:textSize="16sp"/>
            <RadioButton
                android:id="@+id/rdIndo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/dialog_radio_indo"
                android:textSize="16sp"/>
        </RadioGroup>


        <Button
            android:id="@+id/btnChoose"
            android:layout_marginTop="10dp"
            android:layout_below="@+id/kategori_l"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:text="@string/dialog_btn_next"/>

    </LinearLayout>

</RelativeLayout>