<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@drawable/bgabout"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.fujimiya.clientpakarpsikologi.TestActivity">

    <LinearLayout
        android:padding="20dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <android.support.v7.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginBottom="5dp"
            >

            <LinearLayout
                android:gravity="center"
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:id="@+id/txt_Kategori"
                    android:textStyle="bold"
                    android:textSize="18sp"
                    android:text="Nama Kategori"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </android.support.v7.widget.CardView>
        <android.support.v7.widget.CardView
            app:cardCornerRadius="15dp"
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
            <LinearLayout
                android:id="@+id/layouttxt"
                android:paddingTop="50dp"
                android:paddingLeft="10dp"
                android:paddingRight="10dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <TextView
                    android:layout_marginLeft="5dp"
                    android:textStyle="bold"
                    android:text="No : 1000"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/txt_nourut"/>
                <View
                    android:layout_marginLeft="5dp"
                    android:layout_marginRight="10dp"
                    android:layout_width="360px"
                    android:layout_height="10px"
                    android:background="@color/black"
                    android:layout_marginBottom="15dp"/>
                <!--<me.biubiubiu.justifytext.library.JustifyTextView-->
                    <!--android:id="@+id/txtPernyataan"-->
                    <!--android:layout_width="wrap_content"-->
                    <!--android:layout_height="wrap_content"-->
                    <!--android:textSize="16sp"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_marginRight="10dp"-->
                    <!--android:layout_marginBottom="15dp"-->
                    <!--android:text=""-->
                    <!--/>-->

                <TextView
                    android:id="@+id/txtPernyataan"
                    android:textStyle="bold"
                    android:layout_margin="10dp"
                    android:textColor="@color/black"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:text="Bagi saya, sebesar apapun resikonya kita harus melakukan apa yang kita yakini benar. Bagi saya, sebesar apapun resikonya kita harus melakukan apa yang kita yakini benar. apa kabar nya "/>


                <RadioGroup
                    android:id="@+id/rGroup"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <RadioButton
                        android:onClick="onRadioButtonClicked"
                        android:id="@+id/rdYa"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_btn_yes"
                        android:textSize="16sp"/>
                    <RadioButton
                        android:onClick="onRadioButtonClicked"
                        android:id="@+id/rdTdk"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/test_btn_no"
                        android:textSize="16sp"/>
                </RadioGroup>
            </LinearLayout>
            <LinearLayout
                android:layout_marginTop="30dp"
                android:padding="10dp"
                android:layout_below="@+id/layouttxt"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">
                <Button
                    android:id="@+id/nextBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="3dp"
                    android:text="@string/test_btn_nest"
                    android:textColor="#FFF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:onClick="btn_next"
                    android:layout_marginBottom="15dp"/>
                <Button
                    android:id="@+id/selesaiBtn"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="3dp"
                    android:background="@color/colorPrimaryDark"
                    android:padding="3dp"
                    android:text="@string/test_btn_finish"
                    android:textColor="#FFF"
                    android:textSize="17sp"
                    android:textStyle="bold"
                    android:onClick="btn_selesai"
                    android:layout_marginBottom="15dp"/>
            </LinearLayout>
            </RelativeLayout>
            </ScrollView>
        </android.support.v7.widget.CardView>
    </LinearLayout>
</android.support.constraint.ConstraintLayout>
