<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorBg"
    tools:context=".DetailKategori">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:padding="20dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical"
        android:layout_marginBottom="20dp"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvCatTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="Title"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/grey_800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCatDescription"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:gravity="center_horizontal"
            android:text="descript"
            android:textColor="@color/grey_800"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="@string/high_scorer"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/grey_800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCatHighScorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="high scorer"
            android:textColor="@color/grey_800"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="@string/low_scorer"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/grey_800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCatLowScorer"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="high scorer"
            android:textColor="@color/grey_800"
            android:textSize="16sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="20dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="@string/skill"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textColor="@color/grey_800"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/tvCatSkill"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:ellipsize="end"
            android:text="skill desc"
            android:textColor="@color/grey_800"
            android:textSize="16sp" />



    </LinearLayout>

    </ScrollView>

</RelativeLayout>